# eisey

./: .env.template  .gitignore  Cargo.toml  PKGBUILD  README.md  docker-compose.yml  mimeapps.list  operation.yml  operation.yml.bk  pubkey  sel-admin.desktop  sel.desktop  sel.install
backend/: Cargo.toml
backend/src/: main.rs
gui-admin/: package.json
gui-admin/src/: App.js  Home.js  SignIn.js
gui-client/: package-lock.json  package.json
gui-client/public/: index.html
gui-client/src/: index.css
gui/src/: App.js  Home.js  SignUp.js
maintenance/: clean_pacman_cache.sh  grub.install.bios.sh  grub.update.sh  kernel.arch.sh  kernel.zen.sh  koompi_kernel.sh  koompi_kernel_executor.sh  refresher_all.sh  refresher_panel.sh  refresher_widget.sh  update_grub.sh
protocol/: Cargo.toml  PKGBUILD  flow.txt  sel-protocol.desktop  sel.desktop
protocol/maintenance/: kernel.koompi.sh  kernel.lts.sh  pacman.cache.sh  pacman.reinstall.all.sh  plasma.restore.default.sh
protocol/src/: bip32_sec.rs  lib.rs  main.rs  rsa_sec.rs
src/: main.rs  ops.rs
