[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-rt = "*"
serde = { version="*", features=["derive"]}
serde_json = "*"
futures = "*"
wither = "*"
tokio = "*"
bcrypt = "*"
jsonwebtoken = "*"