[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-rt = "*"
actix-service = "*"
actix-cors = "*"
actix-web-grants = "*"
actix-web-httpauth = "*"
serde = { version="*", features=["derive"]}
serde_json = "*"
futures = "*"
wither = "*"
tokio = "*"
bcrypt = "*"
jsonwebtoken = "*"
chrono = "*"
dotenv = "*"
protocol = {path = "../protocol"}
base64 = "*"
rsa = "0.4.1"
rand_core = { version = "0.6", features = ["std"] }
bip32 = "*"
k256 = "*"
sha2 = "0.9.5"
sha1 = "*"