[package]
name = "protocol"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "gendb"

[[bin]]
name = "issuer-cli"

[[bin]]
name = "user-cli"

[[bin]]
name = "user-gui"

[[bin]]
name = "issuer-gui"

[dependencies]
subprocess = "*"
url = "*"
serde = {version="*", features=["derive"]}
serde_yaml = "*"
rsa = "0.4.1"
bip32 = "*"
rand_core = { version = "0.6", features = ["std"] }
k256 = "*"
sha2 = "*"
pem = "*"
base64 = "*"
# UI
webkit2gtk = { version = "*", features=["v2_8", "v2_6", "v2_4", "v2_22"], default-features = false}
glib = "*"
gtk = "*"
actix-web = "*"
actix-rt = "*"
mime_guess = "*"
rust-embed = "*"
gio = "*"
gdk = "*"

glib-sys = "*"
webkit2gtk-sys = "*"
gobject-sys = "*" 